Pull up following revision(s) (requested by taca in ticket #571): 	external/apache2/mDNSResponder/dist/mDNSShared/dnssd_clientstub.c: revision 1.4 Fix setsockopt(2) error on 64bit environment (amd64). Reported by PR lib/46693 by me and OK'ed by dholland@.